--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,91 @@
+body {
+    background-color: rgb(255,255,255);
+    color: #2B3A67;
+}
+
+#mainNav.navbar-shrink {
+    border-bottom: none;
+}
+
+
+
+
+
+.masthead {
+    background-image: url(../img/sky.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.about {
+    padding-left: 150px; 
+    padding-right: 150px;  
+    vertical-align: middle; 
+    height: 100%;
+}
+
+.about a, .about a:hover {
+    color: #b76e79;
+    text-decoration: underline;
+}
+
 @media (min-width: 768px) {
     .image-wrapper {
         /*margin: 15px;*/
         max-width: 400px;
         width: 100%;
+        display: inline-block;
+        vertical-align: middle;
+        height: 100%
     }
 }
 
-#about p {
-    color: #ac5864
+.social-icons i {
+    font-size: 1.25rem;
+    color: #b76e79;
+}
+
+
+.loader-wrapper {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #242f3f;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+.loader {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  position: relative;
+  border: 4px solid #Fff;
+  animation: loader 2s infinite ease;
+}
+.loader-inner {
+  vertical-align: top;
+  display: inline-block;
+  width: 100%;
+  background-color: #fff;
+  animation: loader-inner 2s infinite ease-in;
+}
+
+@keyframes loader {
+  0% { transform: rotate(0deg);}
+  25% { transform: rotate(180deg);}
+  50% { transform: rotate(180deg);}
+  75% { transform: rotate(360deg);}
+  100% { transform: rotate(360deg);}
+}
+@keyframes loader-inner {
+  0% { height: 0%;}
+  25% { height: 0%;}
+  50% { height: 100%;}
+  75% { height: 100%;}
+  100% { height: 0%;}
 }
 
 #freelance p {
@@ -15,15 +93,14 @@
 }
 
 #contact p {
-    color: #6874e8;
+    color: #2B3A67;
 }
 
 h1 {
-    color: #b76e79;
+    color: #5F81A6;
 }
 
 .about {
-    color: #AC5864;
     padding: 0px 0px;
     /*width: 100%;*/
     text-align: center;
@@ -36,7 +113,7 @@ h1 {
 }
 
 .btn1:hover, .btn1:focus {
-    background-color: #efcfc4;
+    background-color: white;
     color: #b76e79;
 }
 
@@ -47,13 +124,13 @@ h1 {
 
 .contact-btn.focus, .contact-btn:focus, .contact-btn:hover {
     color: white;
-    background-color: #6874e8;
-    border-color: #6874e8;
+    background-color: #b76e79;
+    border-color: #b76e79;
 }
 
 .contact-btn {
-    color: #6874e8;
-    border: 1px solid #6874e8;
+    color: #b76e79;
+    border: 1px solid #b76e79;
     background-color: transparent;
     font-family: Cabin,Helvetica Neue,Helvetica,Arial,sans-serif; 
 }
@@ -68,11 +145,11 @@ h1 {
 }
 
 #mainNav .nav-link.active {
-    background-color: rgba(239,207,196,0.5); 
+    background-color: rgba(169,222,249,0.5); 
 }
 
 #mainNav .nav-link {
-    color: #ac5864;
+    color: #5F81A6;
 }
 
 section {
@@ -86,36 +163,57 @@ img-fluid{
     max-width: 100%;
 }
 
-.form-control:focus {
-  color: #495057;
-  background-color: #fff;
-  border-color: #efcfc4;
-  outline: 0;
-  box-shadow: 0 0 0 .2rem rgba(239,207,196, 0.25);
+@media (min-width: 992px) {
+    #portfolio .col-lg-6 {
+    height: 450px;
+    font-size: 1rem;
+    }
+    #portfolio .col-lg-6 .project-desc {
+        background-color: white;
+    }
+}
+}
+
+@media (min-width: 360px) {
+    #portfolio .col-lg-6 {
+    height: 100%;
+    max-height: 450px;
+    margin-bottom: 20px;
+    }
+}
+
+#portfolio .project-desc {
+        height: inherit;
+        background-color: white;
+        padding-top: 20px;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+
+.project-desc .btn-secondary {
+    background-color: #5F81A6;
+    
+}
+
+.project-desc .btn-secondary:hover {
+    background-color: #DEF2FD;
+    color: #242f3f;
+    border: none;
+    
+}
+
+.project-desc h3 {
+    padding-top: 10px;
+    padding-bottom: 0;
+    margin-bottom: 0;
+}
+
+.project-desc p {
+    font-size: 1rem;
 }
 
 
-.portfolio-item{
-    display:block;
-    position:relative;
-    overflow:hidden;
-    max-width:530px;
-    margin:auto auto 1rem;}
 
-.portfolio-item .caption{
-    display:-ms-flexbox;
-    display:flex;
-    height:100%;
-    width:100%;
-    background-color:rgba(33,37,41,.2);
-    position:absolute;
-    top:0;
-    bottom:0;
-    z-index:1;}
 
-.portfolio-item .caption.dark:not(:hover) {
-    background-color:rgba(0,0,0,0.4);
-}
 
-.portfolio-item .caption .caption-content{color:#fff;margin:auto 2rem 2rem}
-.portfolio-item .caption .caption-content h2{font-size:1.5rem;text-transform:uppercase}.portfolio-item .caption .caption-content p{font-weight:300;font-size:1.2rem}@media (min-width:992px){.portfolio-item{max-width:none;margin:0}.portfolio-item .caption{-webkit-transition:-webkit-clip-path .25s ease-out,background-color .7s;-webkit-clip-path:inset(0);clip-path:inset(0)}.portfolio-item .caption .caption-content{transition:opacity .25s;margin-left:5rem;margin-right:5rem;margin-bottom:5rem}.portfolio-item img{-webkit-transition:-webkit-clip-path .25s ease-out;-webkit-clip-path:inset(-1px);clip-path:inset(-1px)}.portfolio-item:hover .caption,.portfolio-item:hover img{-webkit-clip-path:inset(2rem);clip-path:inset(2rem)}.portfolio-item:hover .caption{background-color:rgba(172,88,100,0.9);}}
